Bug 170908 - FILESAVE DOCX: corrupt document reported by MS Word when delText without a w:del (due to OutFlys)
Summary: FILESAVE DOCX: corrupt document reported by MS Word when delText without a w:...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
26.8.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:26.8.0
Keywords: bisected, regression
Depends on:
Blocks: DOCX-Corrupted
  Show dependency treegraph
 
Reported: 2026-02-20 00:45 UTC by Justin L
Modified: 2026-03-04 23:46 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
135010-1-GS50-GettingStarted_minimized.docx: original is attachment 163356 (72.92 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2026-02-20 00:45 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Justin L 2026-02-20 00:45:34 UTC
Created attachment 205650 [details]
135010-1-GS50-GettingStarted_minimized.docx: original is attachment 163356 [details]

The provided document is reported as corrupt by MS Word after LO 26.8 round-trips it.

Steps to reproduce:
1.) open 135010-1-GS50-GettingStarted_minimized.docx in LO and resave as DOCX
2.) open the resaved file in MS Word

MS Word reports the file is corrupt.

This started in 26.8 with commit a9cfc3ac97ca37f6ea26797ddda66cc8d10accb5
Author: Justin Luth on Thu Feb 5 09:30:29 2026 +0100
    tdf#170516 docx export: (almost) always write flies in separate w:r
    Reviewed-on: https://gerrit.libreoffice.org/c/core/+/198633
Comment 1 Commit Notification 2026-02-25 12:30:15 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/90a3382d4e38a279cae0461d2b4fd210cb7027de

tdf#170908 docx export: stack run's m_pRedlineData

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2026-03-04 23:46:58 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/13069df04419b4dc85822be4fb5a079231c9bdf0

tdf#170908 docx export: WritePendingPlaceholder in Redline as needed

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.