tdf#170908 docx export: stack run's m_pRedlineData

The cached m_pRedlineData was being overwritten
by the runs in OutFlys.

It should be safe to use a stack for export,
since internally any run needs to both start and stop.

There are some sdraw things that don't use start/endRun though.
So what to do about them - is pushing a nullptr needed
to prevent them from inheritting redline info?
I believe so - otherwise it might use element XML_delText.

make CppunitTest_sw_ooxmlexport25 \
    CPPUNIT_TEST_NAME=testTdf170908_delText

Change-Id: Ic5f1d68da984a751ccf880718147df0dbc11c654
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/199895
Reviewed-by: Justin Luth <jluth@mail.com>
Tested-by: Jenkins